--- a/mon-portfolio/src/components/header/header.scss
+++ b/mon-portfolio/src/components/header/header.scss
@@ -1,46 +1,75 @@
 header{
-
-    img{
-        width: 80px;
-        transform-origin: 50% 47%;
-        transition: ease-in-out 0.2s;
+    z-index: 9999;
+    background-color: var(--background-color);
+    opacity: 0.9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position:fixed;
+    right:0;
+    left:0;
     
 
-        &:hover {
+    .header-container {
 
-            transform: rotatez(60deg)
-            
-        }
-    }
-
-    h1{
-        margin: 0;
-        padding: 0 ;
-    }
-
-    width: 1000px;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    padding: 10px 10px 0 0;   
-
-    nav{
-        font-size: 18px;
+        width: 1000px;
         display: flex;
-        gap: 20px;
-        margin-bottom: 10px;
+        align-items: center; 
         justify-content: center;
-        align-content: center;
+        padding: 10px 10px 0 0;
+        justify-content: space-between;  
 
-        a {
-            
+        .socials{
+            display: flex;
+            gap: 10px;
+    
+            img{
+                width: 25px;
+            }
+        }
+    
+        .logo {
+            width: 80px;
+            transform-origin: 50% 47%;
             transition: ease-in-out 0.2s;
-          
+        
+    
             &:hover {
-              transform: translateY(-2px); 
-              font-weight: 400; 
+    
+                transform: rotatez(60deg)
+                
+            }
+        }
+    
+        h1{
+            margin: 0;
+            padding: 0 ;
+        }
+    
+         
+    
+        nav{
+            font-size: 18px;
+            display: flex;
+            gap: 20px;
+            margin-bottom: 10px;
+            justify-content: center;
+            align-content: center;
+    
+            a {
+                
+                transition: ease-in-out 0.2s;
               
-            }   
-        }  
+                &:hover {
+                  transform: translateY(-2px); 
+                  font-weight: 400; 
+                  
+                }   
+            }  
+        }
+
+
     }
+
+    
 }
