--- a/mon-portfolio/src/components/section/section.scss
+++ b/mon-portfolio/src/components/section/section.scss
@@ -1,4 +1,19 @@
 .section1{
-    height: 30vh;
+   
+    height: 60px;
+    width: 100%; 
     background-color: var(--secondary-background-color);
+    text-align: center;
+    justify-content: center;
+   
+    h1{
+        padding: 0;
+        margin: 0;
+        margin: 5px;
+        font-weight: 300;
+        font-size: 40px;
+        color: var(--main-text-color)
+
+    }
+    
 }
