--- a/mon-portfolio/src/components/header/header.scss
+++ b/mon-portfolio/src/components/header/header.scss
@@ -8,6 +8,7 @@ header{
     position:fixed;
     right:0;
     left:0;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     
 
     .header-container {
