--- a/mon-portfolio/src/App.scss
+++ b/mon-portfolio/src/App.scss
@@ -25,6 +25,27 @@ html {
     flex-direction: column;
     align-items: center;
     gap: 5vh;
+    display: flex;
+    flex-direction: column;
+
+    .body{
+        margin-top: 150px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .skills-and-technos{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    
 }
 
 #root {
