--- a/mon-portfolio/src/components/header/header.scss
+++ b/mon-portfolio/src/components/header/header.scss
@@ -26,6 +26,17 @@ header{
     
             img{
                 width: 25px;
+            transition: ease-in-out 0.2s;
+
+                &:hover{
+                transform: translateY(-2px); 
+
+                }
+            }
+
+            &:hover{
+                cursor: pointer;
+
             }
         }
     
