--- a/mon-portfolio/src/components/skillcard/skillcard.scss
+++ b/mon-portfolio/src/components/skillcard/skillcard.scss
@@ -1,19 +1,43 @@
 .skillcard{
-    width: auto;
+    cursor: pointer;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    gap: 10px;
+    background-color: var(--background-color);
     border: 4px solid var(--accent-color);
     border-radius: 25px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: ease-in-out 0.2s;
+    width: 50%;
 
-
-    img{
-        height: 50px;
+    .title{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    h3{ 
         margin: 10px;
     }
-    h3{
-        margin: 10px
+   
+    p{
+        width: 60%;
+
     }
+
+    &:hover {
+        scale: 1.03;
+        background-color: var(--accent-color);
+        
+        h3{color:  var(--background-color);}
+        p{color:  var(--background-color);}        
+        svg{
+            color: var(--background-color);
+        }
+    
+    }
+
+
+
+   
 }
