--- a/mon-portfolio/src/components/skills/skills.scss
+++ b/mon-portfolio/src/components/skills/skills.scss
@@ -2,4 +2,25 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%; 
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-text-color);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
+
+    h2{
+        padding: 0;
+        margin: 0;
+        margin: 5px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        font-weight: 300;
+        color: var(--background-color);
+    }
+    
 }
