--- a/mon-portfolio/src/components/contact/contact.scss
+++ b/mon-portfolio/src/components/contact/contact.scss
@@ -7,6 +7,8 @@
     background-color: var(--main-text
     -color);
 
+    
+
     h2{
         margin-bottom: 50px;
     }
@@ -17,6 +19,7 @@
         flex-direction: column;
         gap: 20px;
         justify-content: center;
+        align-items: center;
 
         label {
             font-size: 20px;
@@ -26,11 +29,13 @@
             display: flex;
             flex-direction: column;
             border: 1px solid var(--accent-color);
-            border-radius: 25px;
+            border-radius: 5px;
             font-size: 16px;
             padding: 5px;
             text-indent: 5px;
             font-family: 'Montserrat';
+            width: 250px;
+            color: var(--main-text);
 
         }
 
@@ -45,8 +50,23 @@
 
         textarea {
             border: 1px solid var(--accent-color);
-            border-radius: 25px;
+            border-radius: 5px;
+            resize: none;
+
+            &::-webkit-scrollbar {
+                width: 4px; 
+              }
+            
+              &::-webkit-scrollbar-thumb {
+                background-color: rgba(0, 0, 0, 0.3); 
+                border-radius: 10px; 
+              }
+            
+              &::-webkit-scrollbar-track {
+                background-color: transparent; 
+              }
         }
+        
 
         button{
             font-size: 25px;
@@ -56,8 +76,14 @@
             height: 45px;
             border: 3px solid var(--main-text-color);
             border-radius: 15px;
+            cursor: pointer;
         }
           
     }
 
+}
+
+h3{
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
