--- a/mon-portfolio/src/components/header/header.scss
+++ b/mon-portfolio/src/components/header/header.scss
@@ -23,6 +23,21 @@ header{
         .socials{
             display: flex;
             gap: 10px;
+
+            .darkmode{
+                width:25px;
+
+                .darkmodeIcon{
+                    font-size : 25px;
+                    transition: ease-in-out 0.2s;
+
+
+                    &:hover{
+                        transform: translateY(-2px); 
+        
+                    }
+                }
+            }
     
             img{
                 width: 25px;
