--- a/mon-portfolio/src/components/technos/technos.scss
+++ b/mon-portfolio/src/components/technos/technos.scss
@@ -4,6 +4,8 @@
     gap: 20px;
     text-align: center;   
     max-width: 50%; 
+    scroll-margin-top: 108px;
+
 
     .card-container{
         display: flex;
