--- a/mon-portfolio/src/App.scss
+++ b/mon-portfolio/src/App.scss
@@ -1,73 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Rajdhani:wght@300;400;500;600;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 :root {
-    --background-color: #FAFAFA;
-    --secondary-background-color: #E0E0E0;
-    --main-text-color: #333333;
-    --secondary-text-color: #1C1C1C;
-    --text-color: #000000;
-    --accent-color: #607D8B;
+  --background-color: #FAFAFA;
+  --secondary-background-color: #E0E0E0;
+  --main-text-color: #333333;
+  --secondary-text-color: #1C1C1C;
+  --accent-color: #607D8B;
 }
 
 .App {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5vh;
-    display: flex;
-    flex-direction: column;
+  color: var(--accent-color);
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5vh;
+  background-color: var(--background-color);
+  transition: ease-in-out 0.2s;
 
-    .body{
-        margin-top: 150px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-    }
-
-    .skills-and-technos{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    
-}
-
-#root {
-    background-color: var(--background-color);
-    height: 200vh;
+  .body {
+    margin-top: 150px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    justify-content: center;
+    gap: 20px;
+
+  }
+
+  .skills-and-technos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+#root {
+  background-color: var(--background-color);
+  height: 200vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1, h2, h3, h4 {
-    color: var(--main-text-color);
-    font-weight: 500;
+  color: var(--main-text-color);
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 600;
 }
 
 p, a {
-    color: var(--text-color);
-    text-decoration: none;
+  color: var(--main-text-color);
+  text-decoration: none;
 
-    &:hover {
-        color: var(--accent-color);
-    }
+  &:hover {
+    color: var(--accent-color);
+  }
 }
