--- a/mon-portfolio/src/components/contact/contact.scss
+++ b/mon-portfolio/src/components/contact/contact.scss
@@ -4,10 +4,8 @@
     flex-direction: column;
     text-align: center;
     padding-bottom: 100px;
-    background-color: var(--main-text
-    -color);
-
-    
+    width:100%;
+    background-color: var(--background-color);
 
     h2{
         margin-bottom: 50px;
@@ -20,6 +18,8 @@
         gap: 20px;
         justify-content: center;
         align-items: center;
+        color: var(--main-text-color);
+
 
         label {
             font-size: 20px;
@@ -45,7 +45,7 @@
             padding: 10px;
             font-size: 16px;
             text-indent: 5px;
-            font-family: 'Montserrat';
+            font-family: 'DM Sans';
         }
 
         textarea {
@@ -69,7 +69,7 @@
         
 
         button{
-            font-size: 25px;
+            font-size: 15px;
             background-color: var(--accent-color);
             color: var(--background-color);
             width: 200px;
@@ -77,6 +77,7 @@
             border: 3px solid var(--main-text-color);
             border-radius: 15px;
             cursor: pointer;
+            
         }
           
     }
