--- a/mon-portfolio/src/components/header/header.scss
+++ b/mon-portfolio/src/components/header/header.scss
@@ -17,7 +17,6 @@ header{
         display: flex;
         align-items: center; 
         justify-content: center;
-        padding: 10px 10px 0 0;
         justify-content: space-between;  
 
         .socials{
@@ -56,15 +55,14 @@ header{
         }
     
         .logo {
+            margin-top: 10px;
             width: 80px;
             transform-origin: 50% 47%;
             transition: ease-in-out 0.2s;
         
     
             &:hover {
-    
-                transform: rotatez(60deg)
-                
+                transform: rotatez(60deg)  
             }
         }
     
@@ -78,25 +76,24 @@ header{
         nav{
             font-size: 18px;
             display: flex;
-            gap: 20px;
-            margin-bottom: 10px;
             justify-content: center;
             align-content: center;
+            margin-top: 0;
     
             a {
                 
                 transition: ease-in-out 0.2s;
-              
+                height:100%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 30px;
+                padding-bottom: 30px;
+                
                 &:hover {
-                  transform: translateY(-2px); 
-                  font-weight: 400; 
-                  
+                  background-color: var(--accent-color);
+                  color: var(--background-color) 
                 }   
             }  
         }
-
-
     }
-
-    
 }
