--- a/mon-portfolio/src/components/projectcard/projectcard.scss
+++ b/mon-portfolio/src/components/projectcard/projectcard.scss
@@ -1,77 +1,88 @@
 .projectcard {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: var(--background-color); // Utilisé en cas d'absence d'image
+  border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
+  transition: ease-in-out 0.2s;
+  width: 35%; 
+  height: auto;
+  overflow: hidden; 
+  background-size: cover; /* Assure que l'image couvre toute la carte */
+  background-position: center; /* Centre l'image de fond */
+  
+  .card-content {
+    background-color: var(--background-color) 0.7;
+    width: 100%;
+    height: 100%;
+  }
 
-    cursor: pointer;
+  .technos-in-project {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: var(--background-color);
-    border: 4px solid var(--accent-color);
-    border-radius: 25px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: ease-in-out 0.2s;
-    width: 45%; 
-    height: auto;
-    overflow: hidden; 
-    padding: 20px;
-  
-    .technos {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+    gap: auto;
+    padding: 10px;
 
-      display: flex;
-      flex-direction: row;
+
+    .technocard {
+      background-color: transparent;
       width: 100%;
-      justify-content: space-around;
-      gap: 10px;
+      height: auto;
+      padding: 0;
+      margin: 0;
+      border: none;
+      box-shadow: none;
 
-      .technocard {
-
-        width: 50%;
+      img {
+        max-width: 30px;          
         height: auto;
-        padding: 0;
-        margin: 0;
-        border: none;
-        box-shadow: none;
-
-        img {
-
-          max-width: 30px;          
-          height: auto;
-
-        }
-
       }
-
+      h2 {
+        color: white;
+      }
+    
     }
-  
-    .title {
+  }
 
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      text-align: center;
+  .title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    color: var(--main-text-color);
+  }
 
-    }
-  
-    h2 {
+  h2 {
+    margin: 10px;
+    color: white;
+  }
 
-      margin: 10px;
+  h3 {
+    margin: 10px;
+    color: white;
+    padding: 10px;
 
-    }
+  }
 
-    h3{
+  p {
+    width: 100%;
+    max-width: 90%;
+    font-size: 1rem;
+    color: white;
 
-        margin: 10px;
+    padding: 10px;
 
-    }
+  }
 
-    p {
+  li {
+    color: white;
 
-      width: 100%;
-      max-width: 90%;
-      font-size: 1rem;
-
-    }
+  }
 }
-  
