--- a/mon-portfolio/src/components/skillcard/skillcard.scss
+++ b/mon-portfolio/src/components/skillcard/skillcard.scss
@@ -1,43 +1,82 @@
-.skillcard{
+.skillcard {
     cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--background-color);
-    border: 4px solid var(--accent-color);
-    border-radius: 25px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: ease-in-out 0.2s;
-    width: 50%;
-
-    .title{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+    background-color: var(--text-color);
+    border-top: 4px solid var(--accent-color); 
+    border-bottom: 4px solid var(--accent-color); 
+    transition: transform 0.2s ease-in-out;
+    width: 30%;
+    height: 150px;
+    box-sizing: border-box;
+    position: relative; 
+    overflow: hidden; 
+  
+    .title {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
     }
-    h3{ 
-        margin: 10px;
+  
+    h3 {
+      margin: 10px;
     }
-   
-    p{
-        width: 60%;
-
+  
+    p {
+      width: 60%;
     }
-
+  
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 0;
+      width: 4px; 
+      background-color: var(--accent-color); 
+      transition: height 0.4s ease;
+    }
+  
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 0; 
+      width: 4px; 
+      background-color: var(--accent-color); 
+      transition: height 0.4s ease; 
+    }
+  
     &:hover {
-        scale: 1.03;
-        background-color: var(--accent-color);
-        
-        h3{color:  var(--background-color);}
-        p{color:  var(--background-color);}        
-        svg{
-            color: var(--background-color);
-        }
-    
+      transform: scale(1.01); 
+  
+      &::before {
+        height: 100%; 
+      }
+  
+      &::after {
+        height: 100%; 
+      }
+  
+      h3 {
+        color: var(--text-color); 
+      }
+  
+      .bottom-border {
+        width: 100%; 
     }
-
-
-
-   
+  
+    .bottom-border {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0; 
+      height: 4px;
+      background-color: var(--accent-color); 
+      transition: width 0.4s ease 0.4s; 
+    }
+  }
 }
