--- a/mon-portfolio/src/components/skills/skills.scss
+++ b/mon-portfolio/src/components/skills/skills.scss
@@ -1,27 +1,25 @@
 .skills{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     width: 100%; 
     text-align: center;
     justify-content: center;
     align-items: center;
-    background-color: var(--main-text-color);
+    background-color: var(--background-color);
     padding-top: 50px;
-    padding-bottom: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-bottom: 100px;
     scroll-margin-top: 88px;
-    
+    transition: ease-in-out 0.2s;
 
+    
+    
     h2{
         padding: 0;
         margin: 0;
         margin: 5px;
         margin-top: 30px;
         margin-bottom: 50px;
-        font-weight: 300;
-        color: var(--background-color);
     }
     
 }
