--- a/mon-portfolio/src/components/contact/contact.scss
+++ b/mon-portfolio/src/components/contact/contact.scss
@@ -6,6 +6,13 @@
     padding-bottom: 100px;
     width:100%;
     background-color: var(--background-color);
+    scroll-margin-top: 88px;
+
+    @media (max-width: 768px) {
+
+        max-width: 100%;
+        padding-bottom: 55px;
+    }
 
     h2{
         margin-bottom: 50px;
@@ -46,6 +53,12 @@
             font-size: 16px;
             text-indent: 5px;
             font-family: 'DM Sans';
+
+            @media (max-width: 768px) {
+
+                width: 300px;
+                max-width: 90%;
+            }
         }
 
         textarea {
