--- a/mon-portfolio/src/components/footer/footer.scss
+++ b/mon-portfolio/src/components/footer/footer.scss
@@ -1,13 +1,52 @@
-footer{
-    display: flex;
-    width:100%;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
-
-    .links-footer{
+footer {
+    background-color: var(--background-color);
+    padding: 20px;
+    text-align: center;
+  
+    .footer-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+  
+      .links-footer {
         display: flex;
-        flex-direction: row;
         gap: 20px;
+        a {
+          text-decoration: none;
+          color: var(--main-text-color);
+          transition: color 0.3s ease;
+  
+          &:hover {
+            color: var(--accent-color);
+          }
+        }
+  
+        @media (max-width: 768px) {
+          /* Cache les liens de navigation sur mobile */
+          display: none;
+        }
+      }
+  
+      .socials {
+        display: flex;
+        gap: 10px;
+        gap:40px;
+  
+        img {
+          width: 35px;
+          transition: transform 0.2s ease-in-out;
+  
+          &:hover {
+            transform: translateY(-2px);
+          }
+        }
+  
+        @media (max-width: 768px) {
+          /* Affiche les icônes sociales uniquement sur mobile */
+          display: flex;
+        }
+      }
     }
-}
+  }
+  
