--- a/mon-portfolio/src/components/projectcard/projectcard.scss
+++ b/mon-portfolio/src/components/projectcard/projectcard.scss
@@ -4,15 +4,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: var(--background-color); // Utilisé en cas d'absence d'image
+  background-color: var(--background-color); 
   border-top: 2px solid var(--accent-color);
   border-bottom: 2px solid var(--accent-color);
   transition: ease-in-out 0.2s;
   width: 35%; 
   height: auto;
   overflow: hidden; 
-  background-size: cover; /* Assure que l'image couvre toute la carte */
-  background-position: center; /* Centre l'image de fond */
+  background-size: cover; 
+  background-position: center; 
+  z-index: 0;
+
+  @media (max-width: 768px) {
+
+    width: 90%;
+  }
   
   .card-content {
     background-color: var(--background-color) 0.7;
@@ -37,6 +43,7 @@
       margin: 0;
       border: none;
       box-shadow: none;
+      z-index: 1;
 
       img {
         max-width: 30px;          
@@ -61,28 +68,36 @@
 
   h2 {
     margin: 10px;
-    color: white;
+    color: var(--main-text-color);
+    @media (max-width: 768px) {
+      font-size: 30px;
+    }
+
   }
 
   h3 {
     margin: 10px;
-    color: white;
+    color: var(--main-text-color);
     padding: 10px;
+
+    @media (max-width: 768px) {
+      font-size: 15px;
+    }
 
   }
 
   p {
     width: 100%;
     max-width: 90%;
-    font-size: 1rem;
-    color: white;
-
+    font-size: 1.2rem;
+    color: var(--main-text-color);
     padding: 10px;
+    font-weight: 500;
 
   }
 
   li {
-    color: white;
-
+    color: var(--main-text-color);
+    font-weight: 500;
   }
 }
