--- a/mon-portfolio/src/components/skillcard/skillcard.scss
+++ b/mon-portfolio/src/components/skillcard/skillcard.scss
@@ -8,10 +8,21 @@
     border-bottom: 4px solid var(--accent-color); 
     transition: transform 0.2s ease-in-out;
     width: 30%;
-    height: 150px;
+    min-height: 150px;
+    height: auto;
     box-sizing: border-box;
     position: relative; 
-    overflow: hidden; 
+    overflow: hidden;
+    transition: ease-in-out 0.2s;
+    
+    @media (max-width: 768px) {
+      width:90%;
+    }
+    @media (max-width: 1024px) {
+      width:90%;
+    }
+
+
   
     .title {
       display: flex;
@@ -22,10 +33,15 @@
   
     h3 {
       margin: 10px;
+      color: white;
+
     }
   
     p {
-      width: 60%;
+      width: 90%;
+      font-weight: 500;
+      color: white;
+
     }
   
     &::before {
