--- a/mon-portfolio/src/components/skills/skills.scss
+++ b/mon-portfolio/src/components/skills/skills.scss
@@ -1,25 +1,98 @@
-.skills{
+.skills {
+  position: relative; 
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  gap: 30px;
+  padding-bottom: 30px;
+  scroll-margin-top: 90px;
+  transition: ease-in-out 0.2s;
+  background-image: url('../../assets/keyboard.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
+  .overlay{
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    width: 100%; 
-    text-align: center;
     justify-content: center;
     align-items: center;
-    background-color: var(--background-color);
-    padding-top: 50px;
-    padding-bottom: 100px;
-    scroll-margin-top: 88px;
-    transition: ease-in-out 0.2s;
+    gap: 30px;
+  }
 
+  
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.7); 
+    z-index: 1; 
+  }
+
+  h2 {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 30px;
+    position: relative;
+    z-index: 2; 
+    color: white;
+
+  }
+
+  .content {
+    position: relative; 
+    z-index: 2; 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-evenly;
     
-    
-    h2{
-        padding: 0;
-        margin: 0;
-        margin: 5px;
-        margin-top: 30px;
-        margin-bottom: 50px;
+  }
+
+
+  .skillcard {
+    position: relative;
+    z-index: 2; 
+    background-color: transparent; 
+  }
+
+  @media (max-width: 1024px) {
+    padding-bottom: 30px;
+    scroll-margin-top: 100px;
+
+    h2 {
+      margin-bottom: 60px;
+      font-size: 1.5rem;
     }
-    
+
+    .content {
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    padding-bottom: 30px;
+    scroll-margin-top: 100px;
+
+    h2 {
+      margin-bottom: 60px;
+      font-size: 1.5rem;
+    }
+
+    .content {
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+  }
 }
